no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: ec74637083e35288ae725838bee5f703453b44e1

--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-br/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-br/strings.xml
@@ -4223,13 +4223,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4284,6 +4300,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4302,6 +4334,42 @@ askouezh
 c
 hwitet
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+N
+haller
+ket
+stalia
+an
+askouezh
 <
 /
 string
@@ -5730,6 +5798,42 @@ mozac_feature_addons_status_learn_more
 Gouzout
 hiroc
 h
+<
+/
+string
+>
+<
+!
+-
+-
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Gwelet
+ar
+munudo
 <
 /
 string
