--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-fr/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-fr/strings.xml
@@ -6099,6 +6099,138 @@ this
 add
 -
 on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Cette
+extension
+enfreint
+les
+politiques
+de
+Mozilla
+et
+a
+t
+d
+sactiv
+e
+.
+Vous
+pouvez
+l
+activer
+mais
+son
+utilisation
+comporte
+des
+risques
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Cette
+extension
+enfreint
+les
+politiques
+de
+Mozilla
+.
+Son
+utilisation
+comporte
+des
+risques
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
 hasn
 '
 t
