--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-gd/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-gd/strings.xml
@@ -819,6 +819,115 @@ string
 !
 -
 -
+Content
+description
+for
+a
+permission
+item
+for
+an
+installed
+add
+-
+on
+details
+page
+.
+%
+1
+s
+will
+be
+replaced
+with
+the
+permission
+text
+name
+%
+2
+d
+will
+be
+replaced
+with
+the
+permission
+position
+in
+the
+list
+and
+%
+3
+d
+will
+be
+replaced
+with
+the
+total
+number
+of
+permissions
+in
+the
+list
+.
+Taking
+as
+an
+example
+"
+Read
+and
+modify
+privacy
+settings
+"
+the
+whole
+text
+will
+read
+Read
+and
+modify
+privacy
+settings
+2
+of
+6
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_content_description_item
+"
+>
+%
+1
+s
+%
+2
+d
+%
+3
+d
+<
+/
+string
+>
+<
+!
+-
+-
 Description
 for
 tabs
@@ -1652,7 +1761,7 @@ string
 -
 -
 The
-authors
+author
 of
 an
 add
@@ -1667,10 +1776,13 @@ string
 name
 =
 "
-mozac_feature_addons_authors
+mozac_feature_addons_author
 "
 >
-ghdaran
+An
+t
+-
+ghdar
 <
 /
 string
@@ -1815,6 +1927,41 @@ string
 !
 -
 -
+A
+link
+that
+points
+to
+the
+detail
+page
+of
+the
+extension
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_more_info_link_2
+"
+>
+Barrachd
+mun
+leudachan
+seo
+<
+/
+string
+>
+<
+!
+-
+-
 The
 settings
 of
@@ -1863,34 +2010,6 @@ mozac_feature_addons_settings_on
 "
 >
 Air
-<
-/
-string
->
-<
-!
--
--
-Indicates
-the
-add
--
-on
-is
-disabled
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_addons_settings_off
-"
->
-Dheth
 <
 /
 string
@@ -1970,6 +2089,51 @@ string
 !
 -
 -
+This
+is
+displayed
+when
+the
+add
+-
+on
+is
+not
+allowed
+to
+run
+in
+private
+browsing
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_not_allowed_in_private_browsing
+"
+>
+Chan
+eil
+seo
+ceadaichte
+ann
+an
+uinneagan
+pr
+obhaideach
+<
+/
+string
+>
+<
+!
+-
+-
 Indicates
 the
 add
@@ -1990,34 +2154,6 @@ mozac_feature_addons_enabled
 "
 >
 An
-comas
-<
-/
-string
->
-<
-!
--
--
-Indicates
-the
-add
--
-on
-is
-disabled
-.
--
--
->
-<
-string
-name
-=
-"
-mozac_feature_addons_disabled
-"
->
 comas
 <
 /
@@ -2361,16 +2497,21 @@ string
 -
 This
 is
+a
 button
-that
+to
 remove
 (
+i
+.
+e
+.
 uninstall
+)
 an
 add
 -
 on
-)
 .
 -
 -
@@ -2386,6 +2527,39 @@ mozac_feature_addons_remove
 Thoir
 air
 falbh
+<
+/
+string
+>
+<
+!
+-
+-
+This
+is
+a
+button
+to
+report
+an
+add
+-
+on
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_report
+"
+>
+D
+an
+aithris
 <
 /
 string
@@ -2448,6 +2622,61 @@ a
 chur
 ris
 ?
+<
+/
+string
+>
+<
+!
+-
+-
+This
+is
+the
+title
+of
+a
+dialog
+that
+asks
+the
+users
+to
+grant
+optional
+permissions
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_optional_permissions_dialog_title
+"
+>
+Tha
+%
+1
+s
+ag
+iarraidh
+ceadan
+a
+bharrachd
+.
 <
 /
 string
@@ -2528,6 +2757,70 @@ string
 -
 This
 is
+the
+subtitle
+of
+a
+dialog
+that
+asks
+the
+users
+to
+grant
+optional
+permissions
+the
+subtitle
+lists
+the
+permissions
+that
+this
+add
+-
+on
+requests
+the
+permissions
+will
+dynamically
+be
+listed
+after
+the
+"
+:
+"
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_optional_permissions_dialog_subtitle
+"
+>
+Tha
+e
+ag
+iarraidh
+na
+leanas
+:
+<
+/
+string
+>
+<
+!
+-
+-
+This
+is
 a
 button
 to
@@ -2553,6 +2846,79 @@ mozac_feature_addons_permissions_dialog_add
 >
 Cuir
 ris
+<
+/
+string
+>
+<
+!
+-
+-
+This
+is
+a
+button
+to
+allow
+the
+optional
+permissions
+requested
+by
+an
+add
+-
+on
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_dialog_allow
+"
+>
+Ceadaich
+<
+/
+string
+>
+<
+!
+-
+-
+This
+is
+a
+button
+to
+deny
+the
+optional
+permissions
+requested
+by
+an
+add
+-
+on
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_permissions_dialog_deny
+"
+>
+Di
+lt
 <
 /
 string
@@ -2604,6 +2970,16 @@ add
 on
 button
 .
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
 -
 -
 >
@@ -2612,13 +2988,14 @@ string
 name
 =
 "
-mozac_feature_addons_install_addon_content_description
+mozac_feature_addons_install_addon_content_description_2
 "
 >
 St
 laich
-an
-tuilleadan
+%
+1
+s
 <
 /
 string
@@ -2734,33 +3111,6 @@ the
 amount
 of
 stars
-and
-/
-separator
-and
-5
-the
-maximum
-number
-of
-stars
-e
-.
-g
-(
-2
-/
-5
-4
-.
-5
-/
-5
-or
-5
-/
-5
-)
 .
 -
 -
@@ -2770,14 +3120,15 @@ string
 name
 =
 "
-mozac_feature_addons_rating_content_description
+mozac_feature_addons_rating_content_description_2
 "
 >
+Rangachadh
+:
 %
 1
 .
 02f
-/
 5
 <
 /
@@ -2848,6 +3199,172 @@ mozac_feature_addons_addons_manager
 Manaidsear
 nan
 tuilleadan
+<
+/
+string
+>
+<
+!
+-
+-
+The
+title
+of
+the
+"
+crash
+"
+notification
+in
+the
+extensions
+manager
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_extensions_manager_notification_title_text
+"
+>
+Tha
+na
+leudachain
+comas
+an
+-
+dr
+sta
+fh
+in
+<
+/
+string
+>
+<
+!
+-
+-
+The
+content
+of
+the
+"
+crash
+"
+notification
+in
+the
+extensions
+manager
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_extensions_manager_notification_content_text
+"
+>
+Tha
+co
+-
+dhi
+aon
+leudachan
+ann
+nach
+eil
+ag
+obair
+tuilleadh
+is
+a
+f
+gail
+an
+t
+-
+siostaim
+agad
+cugallach
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+to
+re
+-
+enable
+the
+extensions
+in
+the
+"
+crash
+"
+notification
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_extensions_manager_notification_restart_button
+"
+>
+Ath
+-
+th
+isich
+na
+leudachain
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+in
+the
+extensions
+manager
+that
+opens
+AMO
+in
+a
+tab
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_find_more_extensions_button_text
+"
+>
+Lorg
+barrachd
+leudachan
 <
 /
 string
@@ -3163,9 +3680,7 @@ notification
 for
 updating
 an
-add
--
-on
+extension
 .
 See
 https
@@ -3193,11 +3708,11 @@ string
 name
 =
 "
-mozac_feature_addons_updater_notification_channel
+mozac_feature_addons_updater_notification_channel_2
 "
 >
-rachaidhean
-aplacaidean
+Naidheachdan
+leudachan
 <
 /
 string
@@ -3253,6 +3768,13 @@ name
 "
 mozac_feature_addons_supported_checker_notification_channel
 "
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Dearbhair
 nan
@@ -3301,6 +3823,13 @@ name
 "
 mozac_feature_addons_supported_checker_notification_title
 "
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Tha
 tuilleadan
@@ -3348,6 +3877,13 @@ name
 =
 "
 mozac_feature_addons_supported_checker_notification_title_plural
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Tha
@@ -3607,70 +4143,6 @@ string
 name
 =
 "
-mozac_feature_addons_not_yet_supported_caption
-"
->
-Tha
-an
-teicneolas
-am
-broinn
-Firefox
-ga
-sh
-or
--
-leasachadh
-.
-Tha
-na
-tuilleadain
-seo
-a
-cleachdadh
-fr
-amaichean
--
-obrach
-nach
-eil
-co
--
-ch
-rdail
-le
-Firefox
-75
-tionndaidhean
-nas
-ire
-.
-<
-/
-string
->
-<
-!
--
--
-This
-is
-the
-caption
-for
-not
-yet
-supported
-screen
-caption
--
--
->
-<
-string
-name
-=
-"
 mozac_feature_addons_not_yet_supported_caption2
 "
 >
@@ -3701,9 +4173,7 @@ the
 caption
 for
 the
-add
--
-on
+extension
 installation
 progress
 overlay
@@ -3715,7 +4185,7 @@ string
 name
 =
 "
-mozac_add_on_install_progress_caption
+mozac_extension_install_progress_caption
 "
 >
 A
@@ -3727,7 +4197,7 @@ is
 a
 dearbhadh
 an
-tuilleadain
+leudachain
 <
 /
 string
@@ -3747,9 +4217,7 @@ trying
 to
 get
 the
-add
--
-on
+extension
 list
 from
 the
@@ -3762,15 +4230,15 @@ string
 name
 =
 "
-mozac_feature_addons_failed_to_query_add_ons
+mozac_feature_addons_failed_to_query_extensions
 "
 >
 Dh
 fh
 illig
 ceasnachadh
-na
-tuilleadan
+nan
+leudachan
 !
 <
 /
@@ -3907,13 +4375,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -3945,6 +4429,588 @@ ladh
 %
 1
 s
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+after
+failing
+to
+install
+an
+extension
+for
+which
+we
+don
+'
+t
+have
+its
+name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_extension_failed_to_install
+"
+>
+Cha
+b
+urrainn
+dhuinn
+an
+leudachan
+seo
+a
+st
+ladh
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Chan
+urrainn
+dhuinn
+an
+leudachan
+seo
+a
+st
+ladh
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+extension
+and
+a
+network
+error
+happened
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_extension_failed_to_install_network_error
+"
+>
+Cha
+b
+urrainn
+dhuinn
+an
+leudachan
+seo
+a
+luchdadh
+a
+-
+nuas
+a
+chionn
+s
+gun
+do
+dh
+fh
+illig
+an
+ceangal
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+extension
+and
+the
+downloaded
+file
+is
+corrupted
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_extension_failed_to_install_corrupt_error
+"
+>
+Cha
+b
+urrainn
+dhuinn
+an
+leudachadh
+seo
+a
+st
+ladh
+a
+chionn
+s
+gu
+bheil
+e
+truaillte
+a
+-
+r
+ir
+coltais
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+and
+an
+error
+occurred
+because
+the
+extension
+was
+not
+signed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_extension_failed_to_install_not_signed_error
+"
+>
+Cha
+b
+urrainn
+dhuinn
+an
+leudachan
+seo
+a
+st
+ladh
+a
+chionn
+s
+nach
+deach
+a
+dhearbhadh
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+and
+an
+error
+occurred
+because
+the
+extension
+was
+incompatible
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+%
+2
+s
+is
+the
+app
+name
+and
+%
+3
+s
+is
+the
+app
+version
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_failed_to_install_incompatible_error
+"
+>
+Cha
+b
+urrainn
+dhuinn
+%
+1
+s
+a
+st
+ladh
+a
+chionn
+s
+nach
+eil
+e
+co
+-
+ch
+rdail
+le
+%
+2
+s
+%
+3
+s
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+blocklisted
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_1
+"
+>
+Cha
+b
+urrainn
+dhuinn
+%
+1
+s
+a
+st
+ladh
+a
+chionn
+s
+bheil
+cunnart
+m
+r
+gun
+adhbharaich
+e
+duilgheadasan
+seasmhachd
+no
+t
+arainteachd
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+can
+only
+be
+install
+via
+Enterprise
+Policies
+which
+is
+not
+supported
+on
+Android
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_admin_install_only
+"
+>
+Cha
+b
+urrainn
+dhuinn
+%
+1
+s
+a
+st
+ladh
+a
+chionn
+s
+nach
+gabh
+a
+st
+ladh
+ach
+le
+buidheann
+a
+chleachdas
+poileasaidhean
+enterprise
+ach
+chan
+eil
+taic
+riutha
+air
+an
+rlar
+seo
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+Tha
+%
+1
+s
+a
+briseadh
+poileasaidhean
+Mozilla
+is
+cha
+ghabh
+a
+st
+ladh
+.
 <
 /
 string
@@ -4440,8 +5506,6 @@ add
 -
 ons
 section
-in
-AddonsManagerAdapter
 .
 -
 -
@@ -4451,11 +5515,11 @@ string
 name
 =
 "
-mozac_feature_addons_unsupported_caption
+mozac_feature_addons_unsupported_caption_2
 "
 >
-1
-tuilleadan
+Aon
+leudachan
 <
 /
 string
@@ -4474,8 +5538,6 @@ add
 -
 ons
 section
-in
-AddonsManagerAdapter
 -
 plural
 .
@@ -4487,9 +5549,8 @@ the
 number
 of
 unsupported
-add
--
-ons
+extensions
+.
 -
 -
 >
@@ -4498,15 +5559,14 @@ string
 name
 =
 "
-mozac_feature_addons_unsupported_caption_plural
+mozac_feature_addons_unsupported_caption_plural_2
 "
 >
-Tuilleadain
-(
+Leudachain
 %
 1
 s
-)
+dhiubh
 <
 /
 string
@@ -4902,6 +5962,14 @@ add
 on
 name
 .
+%
+2
+s
+is
+the
+app
+name
+.
 -
 -
 >
@@ -4910,16 +5978,25 @@ string
 name
 =
 "
-mozac_feature_addons_installed_dialog_description
+mozac_feature_addons_installed_dialog_description_2
 "
 >
-Fosgail
-e
-sa
-chl
+Faigh
+cothrom
+air
+%
+1
+s
+on
+cl
 r
 -
 taice
+%
+2
+s
+menu
+.
 <
 /
 string
@@ -4950,13 +6027,460 @@ string
 name
 =
 "
-mozac_feature_addons_installed_dialog_okay_button
+mozac_feature_addons_installed_dialog_okay_button_2
 "
 >
 Ceart
-tha
-mi
-agaibh
+ma
+-
+th
+<
+/
+string
+>
+<
+!
+-
+-
+"
+Learn
+more
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_learn_more
+"
+>
+Barrachd
+fiosrachaidh
+<
+/
+string
+>
+<
+!
+-
+-
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Faic
+am
+mion
+-
+fhiosrachadh
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted
+"
+>
+Chaidh
+%
+1
+s
+a
+chur
+comas
+air
+sg
+th
+adhbharan
+t
+arainteachd
+no
+seasmhachd
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Tha
+an
+leudachan
+seo
+a
+briseadh
+poileasaidhean
+Mozilla
+s
+chaidh
+a
+chur
+comas
+.
+Is
+urrainn
+dhut
+a
+chur
+an
+comas
+ach
+dh
+fhaoidte
+gum
+bi
+sin
+cunnartach
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Tha
+an
+leudachan
+seo
+a
+briseadh
+poileasaidhean
+Mozilla
+.
+Dh
+fhaoidte
+gum
+bi
+e
+cunnartach
+a
+chleachdadh
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+hasn
+'
+t
+been
+signed
+correctly
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_unsigned
+"
+>
+Cha
+b
+urrainn
+dhuinn
+dearbhadh
+gu
+bheil
+%
+1
+s
+t
+arainte
+agus
+chaidh
+a
+chur
+comas
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+isn
+'
+t
+compatible
+with
+the
+application
+version
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+%
+2
+s
+is
+the
+app
+name
+and
+%
+3
+s
+is
+the
+app
+version
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_incompatible
+"
+>
+Chan
+eil
+%
+1
+s
+co
+-
+ch
+rdail
+leis
+an
+tionndadh
+agad
+dhe
+%
+2
+s
+(
+tionndadh
+%
+3
+s
+)
+.
 <
 /
 string
