--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-nn-rNO/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-nn-rNO/strings.xml
@@ -4171,13 +4171,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4231,6 +4247,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4249,6 +4281,40 @@ installere
 denne
 utvidinga
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Kan
+ikkje
+installere
+utvidinga
 <
 /
 string
@@ -4617,6 +4683,62 @@ tta
 p
 denne
 plattforma
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+>
+%
+1
+s
+bryt
+Mozillas
+retningslinjer
+og
+kan
+ikkje
+installerast
 .
 <
 /
@@ -5642,6 +5764,41 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Sj
+detaljar
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5699,6 +5856,131 @@ sikkerheits
 -
 eller
 stabilitetsproblem
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+>
+Denne
+utvidinga
+bryt
+Mozillas
+retningslinjer
+og
+har
+vorte
+deaktivert
+.
+Du
+kan
+aktivere
+det
+men
+dette
+kan
+vere
+risikabelt
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Denne
+utvidinga
+bryt
+Mozillas
+retningslinjer
+.
+bruke
+det
+kan
+vere
+risikabelt
 .
 <
 /
