--- a/mobile/android/android-components/components/feature/prompts/src/main/res/values-gd/strings.xml
+++ b/mobile/android/android-components/components/feature/prompts/src/main/res/values-gd/strings.xml
@@ -358,12 +358,15 @@ string
 name
 =
 "
-mozac_feature_prompt_dont_save
+mozac_feature_prompt_dont_save_2
 "
 >
-Na
-s
-bhail
+Chan
+ann
+an
+-
+dr
+sta
 <
 /
 string
@@ -495,11 +498,15 @@ string
 name
 =
 "
-mozac_feature_prompt_dont_update
+mozac_feature_prompt_dont_update_2
 "
 >
-Na
-raich
+Chan
+ann
+an
+-
+dr
+sta
 <
 /
 string
@@ -559,20 +566,16 @@ string
 name
 =
 "
-mozac_feature_prompt_error_empty_password
+mozac_feature_prompt_error_empty_password_2
 "
 >
-Chan
-fhaod
-raon
-an
-fhacail
--
-fhaire
+Cuir
 a
-bhith
-b
-n
+-
+steach
+facal
+-
+faire
 <
 /
 string
@@ -603,17 +606,16 @@ string
 name
 =
 "
-mozac_feature_prompt_error_unknown_cause
+mozac_feature_prompt_error_unknown_cause_2
 "
 >
-Cha
-ghabh
-an
-cl
-radh
-a
+Chan
+urrainn
+dhuinn
+am
+facal
 -
-steach
+faire
 a
 sh
 bhaladh
@@ -649,7 +651,7 @@ should
 save
 the
 new
-login
+password
 .
 -
 -
@@ -659,20 +661,17 @@ string
 name
 =
 "
-mozac_feature_prompt_login_save_headline
+mozac_feature_prompt_login_save_headline_2
 "
 >
 A
 bheil
 thu
 airson
-an
-cl
-radh
-a
+am
+facal
 -
-steach
-seo
+faire
 a
 sh
 bhaladh
@@ -710,7 +709,7 @@ app
 should
 update
 the
-login
+password
 .
 -
 -
@@ -720,20 +719,17 @@ string
 name
 =
 "
-mozac_feature_prompt_login_update_headline
+mozac_feature_prompt_login_update_headline_2
 "
 >
 A
 bheil
 thu
 airson
-an
-cl
-radh
-a
+am
+facal
 -
-steach
-seo
+faire
 rachadh
 ?
 <
@@ -781,7 +777,7 @@ string
 name
 =
 "
-mozac_feature_prompt_login_add_username_headline
+mozac_feature_prompt_login_add_username_headline_2
 "
 >
 A
@@ -794,18 +790,7 @@ t
 ainm
 -
 cleachdaiche
-seo
-a
-chur
-ris
-an
-fhacal
--
-fhaire
-a
-sh
-bhail
-thu
+rachadh
 ?
 <
 /
@@ -1720,12 +1705,12 @@ Option
 in
 expanded
 select
-login
+password
 prompt
 that
 links
 to
-login
+password
 settings
 -
 -
@@ -1735,17 +1720,15 @@ string
 name
 =
 "
-mozac_feature_prompts_manage_logins
+mozac_feature_prompts_manage_logins_2
 "
 >
 Sti
 irich
 na
-cl
-raidhean
-a
+faclan
 -
-steach
+faire
 <
 /
 string
@@ -1760,12 +1743,12 @@ for
 expanding
 the
 saved
-logins
+passwords
 options
 in
 the
 select
-login
+password
 prompt
 -
 -
@@ -1775,18 +1758,18 @@ string
 name
 =
 "
-mozac_feature_prompts_expand_logins_content_description
+mozac_feature_prompts_expand_logins_content_description_2
 "
 >
 Leudaich
 na
-mholar
-de
-chl
-raidhean
-a
+faclan
 -
-steach
+faire
+a
+sh
+bhail
+thu
 <
 /
 string
@@ -1801,12 +1784,12 @@ for
 collapsing
 the
 saved
-logins
+passwords
 options
 in
 the
 select
-login
+password
 prompt
 -
 -
@@ -1816,20 +1799,20 @@ string
 name
 =
 "
-mozac_feature_prompts_collapse_logins_content_description
+mozac_feature_prompts_collapse_logins_content_description_2
 "
 >
 Co
 -
 theannaich
 na
-mholar
-de
-chl
-raidhean
-a
+faclan
 -
-steach
+faire
+a
+sh
+bhail
+thu
 <
 /
 string
@@ -1842,7 +1825,7 @@ Header
 for
 the
 select
-login
+password
 prompt
 to
 allow
@@ -1854,7 +1837,7 @@ form
 with
 a
 saved
-login
+password
 -
 -
 >
@@ -1863,16 +1846,507 @@ string
 name
 =
 "
-mozac_feature_prompts_saved_logins
+mozac_feature_prompts_saved_logins_2
 "
 >
-Cl
-raidhean
-a
+Faclan
 -
-steach
+faire
 a
-mholamaid
+sh
+bhail
+thu
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+suggest
+strong
+password
+prompt
+to
+allow
+users
+to
+fill
+a
+form
+with
+a
+suggested
+strong
+password
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_content_description
+"
+>
+Mol
+facal
+-
+faire
+l
+idir
+<
+/
+string
+>
+<
+!
+-
+-
+Header
+for
+the
+suggest
+strong
+password
+prompt
+to
+allow
+users
+to
+fill
+a
+form
+with
+a
+suggested
+strong
+password
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_2
+"
+>
+Cleachd
+facal
+-
+faire
+l
+idir
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+using
+the
+suggest
+strong
+password
+confirmation
+dialog
+.
+%
+1
+s
+will
+be
+replaced
+with
+the
+generated
+password
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_message
+"
+>
+Cleachd
+facal
+-
+faire
+l
+idir
+:
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+using
+the
+suggest
+strong
+password
+confirmation
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_title
+"
+>
+A
+bheil
+thu
+airson
+am
+facal
+-
+faire
+l
+idir
+a
+chleachdadh
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+suggest
+strong
+password
+confirmation
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_description_2
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+D
+on
+na
+cunntasan
+agad
+le
+facal
+-
+faire
+l
+idir
+a
+chaidh
+a
+ghintinn
+air
+thuaiream
+.
+Th
+id
+a
+sh
+bhaladh
+sa
+chunntas
+agad
+far
+am
+bi
+e
+ri
+do
+l
+imh
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+suggest
+strong
+password
+confirmation
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_description_3
+"
+>
+D
+on
+an
+cunntas
+agad
+le
+facal
+-
+faire
+l
+idir
+a
+chaidh
+a
+ghintinn
+air
+thuaiream
+.
+Th
+id
+a
+sh
+bhaladh
+sa
+chunntas
+agad
+far
+am
+bi
+e
+ri
+do
+l
+imh
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Pressing
+this
+will
+use
+the
+suggested
+strong
+password
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_use_password
+"
+>
+Cleachd
+facal
+-
+faire
+<
+/
+string
+>
+<
+!
+-
+-
+Pressing
+this
+will
+dismiss
+the
+suggested
+strong
+password
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_dismiss
+"
+>
+Chan
+ann
+an
+-
+dr
+sta
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+showing
+the
+suggest
+strong
+password
+saved
+confirmation
+snackbar
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_saved_snackbar_title
+"
+>
+Chaidh
+am
+facal
+-
+faire
+a
+sh
+bhaladh
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+showing
+the
+suggest
+strong
+password
+updated
+confirmation
+snackbar
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_suggest_strong_password_updated_snackbar_title
+"
+>
+Chaidh
+am
+facal
+-
+faire
+rachadh
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+showing
+the
+username
+updated
+confirmation
+snackbar
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompt_login_snackbar_username_updated
+"
+>
+Chaidh
+an
+t
+-
+ainm
+-
+chleachdaiche
+rachadh
 <
 /
 string
@@ -2074,7 +2548,6 @@ Header
 for
 the
 select
-credit
 card
 prompt
 to
@@ -2087,7 +2560,6 @@ form
 with
 a
 saved
-credit
 card
 .
 -
@@ -2098,13 +2570,15 @@ string
 name
 =
 "
-mozac_feature_prompts_select_credit_card
+mozac_feature_prompts_select_credit_card_2
 "
 >
-Tagh
+Cleachd
 cairt
--
-chreideis
+a
+sh
+bhail
+thu
 <
 /
 string
@@ -2118,14 +2592,12 @@ description
 for
 expanding
 the
-select
-credit
+saved
 card
 options
 in
 the
 select
-credit
 card
 prompt
 .
@@ -2137,16 +2609,16 @@ string
 name
 =
 "
-mozac_feature_prompts_expand_credit_cards_content_description
+mozac_feature_prompts_expand_credit_cards_content_description_2
 "
 >
 Leudaich
 na
 cairtean
--
-creideis
 a
-mholamaid
+sh
+bhail
+thu
 <
 /
 string
@@ -2160,14 +2632,12 @@ description
 for
 collapsing
 the
-select
-credit
+saved
 card
 options
 in
 the
 select
-credit
 prompt
 .
 -
@@ -2178,7 +2648,7 @@ string
 name
 =
 "
-mozac_feature_prompts_collapse_credit_cards_content_description
+mozac_feature_prompts_collapse_credit_cards_content_description_2
 "
 >
 Co
@@ -2186,10 +2656,10 @@ Co
 theannaich
 na
 cairtean
--
-creideis
 a
-mholamaid
+sh
+bhail
+thu
 <
 /
 string
@@ -2203,13 +2673,11 @@ in
 the
 expanded
 select
-credit
 card
 prompt
 that
 links
 to
-credit
 cards
 settings
 .
@@ -2221,15 +2689,13 @@ string
 name
 =
 "
-mozac_feature_prompts_manage_credit_cards
+mozac_feature_prompts_manage_credit_cards_2
 "
 >
 Sti
 irich
 na
 cairtean
--
-creideis
 <
 /
 string
@@ -2338,11 +2804,17 @@ the
 title
 of
 the
-save
-credit
+saved
 card
 dialog
 .
+Parameter
+will
+be
+replaced
+by
+app
+name
 -
 -
 >
@@ -2351,25 +2823,26 @@ string
 name
 =
 "
-mozac_feature_prompts_save_credit_card_prompt_body
+mozac_feature_prompts_save_credit_card_prompt_body_2
 "
 >
-Th
-id
+Crioptaichidh
+%
+s
 ireamh
 na
-cairte
-a
-chrioptachadh
+cairt
+agad
 .
 Cha
-t
+d
 id
 an
 c
 d
 t
 arainteachd
+agad
 a
 sh
 bhaladh
@@ -2436,7 +2909,7 @@ description
 for
 expanding
 the
-select
+saved
 addresses
 options
 in
@@ -2453,7 +2926,7 @@ string
 name
 =
 "
-mozac_feature_prompts_expand_address_content_description
+mozac_feature_prompts_expand_address_content_description_2
 "
 >
 Leudaich
@@ -2461,9 +2934,9 @@ na
 se
 laidhean
 a
-tha
-gam
-moladh
+sh
+bhail
+thu
 <
 /
 string
@@ -2477,7 +2950,7 @@ description
 for
 collapsing
 the
-select
+saved
 address
 options
 in
@@ -2494,7 +2967,7 @@ string
 name
 =
 "
-mozac_feature_prompts_collapse_address_content_description
+mozac_feature_prompts_collapse_address_content_description_2
 "
 >
 Co
@@ -2504,9 +2977,9 @@ na
 se
 laidhean
 a
-tha
-gam
-moladh
+sh
+bhail
+thu
 <
 /
 string
@@ -2538,6 +3011,404 @@ irich
 na
 se
 laidhean
+<
+/
+string
+>
+<
+!
+-
+-
+Federated
+Credential
+Management
+prompts
+-
+-
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+Account
+picture
+in
+the
+Select
+Account
+FedCM
+prompt
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_account_picture
+"
+>
+Dealbh
+a
+chunntais
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+of
+the
+Identity
+Credential
+provider
+dialog
+chooser
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_identity_credentials_choose_provider
+"
+>
+Tagh
+solaraiche
+cl
+raidh
+a
+-
+steach
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+of
+an
+account
+picker
+dialog
+for
+identity
+credentials
+.
+The
+%
+1
+s
+will
+be
+replaced
+with
+the
+name
+of
+the
+provider
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_identity_credentials_choose_account_for_provider
+"
+>
+Cl
+raich
+a
+-
+steach
+air
+cunntas
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+of
+the
+Identity
+Credential
+privacy
+policy
+dialog
+title
+.
+The
+%
+1
+s
+will
+be
+replaced
+with
+the
+name
+of
+the
+provider
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_identity_credentials_privacy_policy_title
+"
+>
+Cleachd
+%
+1
+s
+mar
+sholaraiche
+cl
+raidh
+a
+-
+steach
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+of
+the
+Identity
+Credential
+privacy
+policy
+dialog
+description
+.
+The
+%
+1
+s
+will
+be
+replaced
+with
+the
+name
+of
+the
+provider
+%
+2
+s
+will
+be
+replaced
+with
+the
+account
+%
+3
+s
+will
+be
+replaced
+with
+the
+privacy
+policy
+url
+and
+%
+4
+s
+will
+be
+replaced
+with
+the
+terms
+of
+service
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_identity_credentials_privacy_policy_description
+"
+tools
+:
+ignore
+=
+"
+IncorrectStraightDoubleQuote
+"
+>
+<
+!
+[
+CDATA
+[
+Ma
+chl
+raicheas
+tu
+a
+-
+steach
+gu
+%
+1
+s
+le
+cunntas
+%
+2
+s
+bidh
+sin
+fo
+bhuaidh
+<
+a
+href
+=
+"
+%
+3
+s
+"
+>
+a
+phoileasaidh
+phr
+obhaideachd
+<
+/
+a
+>
+agus
+<
+a
+href
+=
+"
+%
+4
+s
+"
+>
+teirmichean
+na
+seirbheise
+<
+/
+a
+>
+aca
+]
+]
+>
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+positive
+button
+of
+the
+Identity
+Credential
+dialogs
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_identity_credentials_continue
+"
+>
+Lean
+air
+adhart
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+for
+the
+cancel
+button
+of
+the
+Identity
+Credential
+dialogs
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_prompts_identity_credentials_cancel
+"
+>
+Sguir
+dheth
 <
 /
 string
