--- a/mobile/android/fenix/app/src/main/res/values-br/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-br/strings.xml
@@ -1658,6 +1658,20 @@ name
 "
 tcp_cfr_message
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Hor
 c
@@ -1709,6 +1723,20 @@ name
 =
 "
 tcp_cfr_learn_more
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Gouzout
@@ -2101,6 +2129,20 @@ name
 "
 tablet_nav_bar_cfr_title
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Nevez
 :
@@ -2148,6 +2190,20 @@ name
 =
 "
 tablet_nav_bar_cfr_message
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Ur
@@ -3561,6 +3617,123 @@ browser_menu_manage_extensions
 Mera
 an
 askouezhio
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Label
+for
+plus
+icon
+used
+to
+add
+extension
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+extension
+(
+for
+example
+:
+ClearURLs
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extension_plus_icon_content_description_2
+"
+>
+Ouzhpenna
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+Label
+for
+plus
+icon
+used
+to
+add
+extensions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_extension_plus_icon_content_description
+"
+moz
+:
+removedIn
+=
+"
+124
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Ouzhpenna
+an
+askouezh
 <
 /
 string
@@ -5084,9 +5257,9 @@ etc
 Back
 button
 for
-the
-page
-tools
+all
+menu
+redesign
 sub
 -
 menu
@@ -6680,6 +6853,13 @@ name
 =
 "
 onboarding_home_screen_jump_back_contextual_hint_2
+"
+moz
+:
+removedIn
+=
+"
+132
 "
 >
 Kejit
@@ -9999,78 +10179,10 @@ name
 "
 cookie_banner_handling_details_site_is_not_supported_request_support_button_2
 "
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 Kas
 ur
 goulenn
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-request
-support
-button
-indicating
-that
-cookie
-banner
-reduction
-is
-not
-supported
-for
-the
-current
-site
-this
-is
-shown
-as
-part
-of
-the
-cookie
-banner
-details
-view
-.
--
--
->
-<
-string
-name
-=
-"
-cookie_banner_handling_details_site_is_not_supported_request_support_button_3
-"
->
-Goulenn
-da
-ouzhpenna
-ul
-lec
-hienn
 <
 /
 string
@@ -10116,20 +10228,6 @@ name
 "
 cookie_banner_handling_details_site_is_not_supported_title_2
 "
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 Goulenn
 vefe
@@ -10140,71 +10238,6 @@ hienn
 -
 ma
 ?
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-title
-indicating
-that
-cookie
-banner
-reduction
-is
-not
-supported
-for
-the
-current
-site
-this
-is
-shown
-as
-part
-of
-the
-cookie
-banner
-details
-view
-.
-The
-first
-parameter
-is
-the
-application
-name
--
--
->
-<
-string
-name
-=
-"
-cookie_banner_handling_details_site_is_not_supported_title_3
-"
->
-Goulenn
-gant
-%
-1
-s
-da
-nac
-ha
-an
-toupino
-ent
-emgefreek
 <
 /
 string
@@ -10399,20 +10432,6 @@ name
 "
 reduce_cookie_banner_unsupported_site
 "
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 N
 eo
@@ -10425,59 +10444,6 @@ hienn
 ma
 c
 hoazh
-<
-/
-string
->
-<
-!
--
--
-Text
-for
-indicating
-cookie
-banner
-handling
-is
-currently
-not
-supported
-for
-this
-site
-this
-is
-shown
-as
-part
-of
-the
-protections
-panel
-with
-the
-tracking
-protection
-toggle
--
--
->
-<
-string
-name
-=
-"
-reduce_cookie_banner_unsupported_site_1
-"
->
-N
-eo
-ket
-skoret
-al
-lec
-hienn
 <
 /
 string
@@ -10671,20 +10637,6 @@ name
 "
 reduce_cookie_banner_details_panel_title_unsupported_site_request_2
 "
-moz
-:
-RemovedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 %
 1
@@ -10718,76 +10670,6 @@ hienn
 ma
 en
 dazont
-.
-<
-/
-string
->
-<
-!
--
--
-Title
-text
-for
-a
-detail
-explanation
-indicating
-cookie
-banner
-reducer
-didn
-'
-t
-work
-for
-the
-current
-site
-this
-is
-shown
-as
-part
-of
-the
-cookie
-banner
-panel
-in
-the
-toolbar
-.
--
--
->
-<
-string
-name
-=
-"
-reduce_cookie_banner_details_panel_title_unsupported_site_request_3
-"
->
-N
-haller
-ket
-nac
-ha
-ar
-goulenno
-toupino
-ent
-emgefreek
-war
-al
-lec
-hienn
--
-ma
-c
-hoazh
 .
 <
 /
@@ -20358,6 +20240,35 @@ string
 !
 -
 -
+Unsubmitted
+crash
+dialog
+negative
+button
+to
+dismiss
+the
+dialog
+-
+-
+>
+<
+string
+name
+=
+"
+unsubmitted_crash_dialog_negative_button
+"
+>
+Serri
+<
+/
+string
+>
+<
+!
+-
+-
 Bookmarks
 -
 -
@@ -21063,6 +20974,41 @@ string
 !
 -
 -
+Text
+indicating
+which
+folder
+a
+bookmark
+or
+folder
+will
+be
+saved
+in
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_save_in_label
+"
+>
+Enrolla
+e
+-
+barzh
+<
+/
+string
+>
+<
+!
+-
+-
 Bookmark
 NAME
 editing
@@ -21080,6 +21026,38 @@ bookmark_name_label
 "
 >
 ANV
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+a
+text
+input
+field
+for
+a
+bookmark
+or
+folder
+name
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_name_label_normal_case
+"
+>
+Anv
 <
 /
 string
@@ -21480,6 +21458,20 @@ name
 =
 "
 bookmark_close_button_content_description
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+130
 "
 >
 Serri
@@ -42618,6 +42610,13 @@ name
 "
 review_quality_check_first_cfr_action
 "
+moz
+:
+removedIn
+=
+"
+132
+"
 tools
 :
 ignore
@@ -42667,6 +42666,13 @@ name
 =
 "
 review_quality_check_second_cfr_action
+"
+moz
+:
+removedIn
+=
+"
+132
 "
 tools
 :
@@ -45665,6 +45671,45 @@ string
 !
 -
 -
+Title
+of
+the
+toolbar
+for
+the
+translation
+feature
+screen
+where
+users
+may
+download
+different
+languages
+for
+translation
+.
+-
+-
+>
+<
+string
+name
+=
+"
+download_languages_translations_toolbar_title_preference
+"
+>
+Pellgarga
+yezho
+<
+/
+string
+>
+<
+!
+-
+-
 Clickable
 text
 from
@@ -46257,6 +46302,110 @@ delete_language_file_dialog_negative_button_text
 "
 >
 Nulla
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+text
+on
+the
+dialog
+used
+by
+the
+translations
+feature
+confirms
+canceling
+a
+download
+in
+progress
+for
+a
+language
+file
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cancel_download_language_file_dialog_positive_button_text
+"
+moz
+:
+removedIn
+=
+"
+130
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Ya
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+text
+on
+the
+dialog
+used
+by
+the
+translations
+feature
+to
+dismiss
+the
+dialog
+.
+-
+-
+>
+<
+string
+name
+=
+"
+cancel_download_language_file_negative_button_text
+"
+moz
+:
+removedIn
+=
+"
+130
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Ket
 <
 /
 string
@@ -47891,7 +48040,9 @@ string
 Text
 shown
 in
-prompt
+the
+survey
+title
 for
 printing
 microsurvey
@@ -47947,7 +48098,9 @@ string
 Text
 shown
 in
-prompt
+the
+survey
+title
 for
 homepage
 microsurvey
@@ -48506,6 +48659,20 @@ name
 "
 exit_fullscreen_with_gesture
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Evit
 kuitaat
@@ -48560,6 +48727,20 @@ name
 =
 "
 exit_fullscreen_with_back_button
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Evit
