--- a/mobile/android/focus-android/app/src/main/res/values-nn-rNO/strings.xml
+++ b/mobile/android/focus-android/app/src/main/res/values-nn-rNO/strings.xml
@@ -715,7 +715,7 @@ name
 menu_open_with_default_browser2
 "
 >
-Opna
+Opne
 i
 %
 1
@@ -811,7 +811,7 @@ name
 menu_open_with_a_browser2
 "
 >
-Opna
+Opne
 i
 <
 /
@@ -1381,47 +1381,6 @@ nettlesarhistorikk
 string
 >
 <
-string
-name
-=
-"
-notification_erase_text_android_14
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Trykk
-eller
-fjern
-dette
-varselet
-for
-slette
-nettlesarhistorikken
-din
-p
-ein
-trygg
-m
-te
-.
-<
-/
-string
->
-<
 !
 -
 -
@@ -1520,7 +1479,7 @@ name
 notification_action_open
 "
 >
-Opna
+Opne
 <
 /
 string
@@ -1561,7 +1520,7 @@ notification_action_erase_and_open
 >
 Slett
 og
-opna
+opne
 <
 /
 string
@@ -3666,7 +3625,7 @@ preference_autocomplete_add_title
 "
 >
 Nettadresse
-legga
+leggje
 til
 <
 /
@@ -4089,12 +4048,12 @@ preference_privacy_block_analytics_summary
 >
 Brukt
 for
-samla
+samle
 inn
-analysera
+analysere
 og
 m
-la
+le
 aktivitetar
 som
 tastetrykk
@@ -4134,12 +4093,12 @@ Innebygd
 p
 nettstader
 for
-spora
+spore
 bes
 ka
 dine
 og
-visa
+vise
 funksjonalitet
 som
 dele
@@ -4811,7 +4770,7 @@ men
 kan
 g
 oppf
-ra
+re
 seg
 uventa
 <
@@ -5017,7 +4976,7 @@ Mozilla
 strevar
 etter
 berre
-samla
+samle
 inn
 det
 vi
@@ -5025,7 +4984,7 @@ treng
 for
 tilby
 og
-forbetra
+forbetre
 %
 1
 s
@@ -6529,7 +6488,7 @@ name
 external_app_prompt_title
 "
 >
-Opna
+Opne
 lenke
 i
 ein
@@ -6608,7 +6567,7 @@ av
 1
 s
 for
-opna
+opne
 denne
 lenka
 i
@@ -6661,7 +6620,7 @@ ein
 app
 som
 kan
-opna
+opne
 lenka
 <
 /
@@ -6749,7 +6708,7 @@ p
 eininga
 di
 kan
-opna
+opne
 denne
 lenka
 .
@@ -6763,7 +6722,7 @@ av
 s
 for
 s
-ka
+ke
 p
 %
 2
@@ -6773,7 +6732,7 @@ ein
 app
 som
 kan
-gjera
+gjere
 dette
 .
 <
@@ -6813,7 +6772,7 @@ name
 external_multiple_apps_matched_exit
 "
 >
-Avslutta
+Avslutte
 privat
 nettlesing
 ?
@@ -6891,7 +6850,7 @@ name
 download_snackbar_open
 "
 >
-Opna
+Opne
 <
 /
 string
@@ -6991,6 +6950,20 @@ name
 =
 "
 onboarding_close_button_content_description
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Lat
@@ -7329,7 +7302,7 @@ onboarding_second_screen_default_browser_button_text
 Bruk
 som
 standard
-nettleser
+nettlesar
 <
 /
 string
@@ -8344,7 +8317,7 @@ Med
 varsel
 kan
 du
-sletta
+slette
 kta
 di
 i
@@ -8358,7 +8331,7 @@ klikk
 Du
 treng
 ikkje
-opna
+opne
 appen
 eller
 sj
@@ -12838,7 +12811,7 @@ name
 tip_set_default_browser
 "
 >
-Opna
+Opne
 kvar
 lenke
 i
@@ -12847,7 +12820,7 @@ i
 s
 \
 n
-Vel
+Bruk
 %
 1
 s
@@ -12975,7 +12948,7 @@ name
 tip_open_in_new_tab
 "
 >
-Opna
+Opne
 ei
 lenke
 i
@@ -13097,53 +13070,6 @@ open_new_tab_snackbar
 "
 >
 Byt
-<
-/
-string
->
-<
-!
--
--
-Text
-displayed
-in
-a
-notification
-when
-the
-user
-enters
-full
-screen
-mode
--
--
->
-<
-string
-name
-=
-"
-full_screen_notification
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Startar
-fullskjermmodus
 <
 /
 string
@@ -13600,7 +13526,7 @@ name
 tab_crash_report_headline
 "
 >
-Orsak
+Beklagar
 .
 Vi
 har
