--- a/mobile/android/android-components/components/feature/media/src/main/res/values-gd/strings.xml
+++ b/mobile/android/android-components/components/feature/media/src/main/res/values-gd/strings.xml
@@ -235,6 +235,389 @@ string
 !
 -
 -
+Text
+of
+notification
+shown
+when
+the
+device
+'
+s
+camera
+is
+shared
+with
+a
+website
+(
+WebRTC
+)
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_media_sharing_camera_text
+"
+>
+Thoir
+gnogag
+a
+dh
+fhosgladh
+an
+taba
+a
+tha
+a
+cleachdadh
+a
+chamara
+agad
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+of
+notification
+shown
+when
+the
+device
+'
+s
+microphone
+is
+shared
+with
+a
+website
+(
+WebRTC
+)
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_media_sharing_microphone_text
+"
+>
+Thoir
+gnogag
+a
+dh
+fhosgladh
+an
+taba
+a
+tha
+a
+cleachdadh
+a
+mhicreofon
+agad
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+of
+notification
+shown
+when
+the
+device
+'
+s
+camera
+and
+microphone
+is
+shared
+with
+a
+website
+(
+WebRTC
+)
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_media_sharing_camera_and_microphone_text
+"
+>
+Thoir
+gnogag
+a
+dh
+fhosgladh
+an
+taba
+a
+tha
+a
+cleachdadh
+a
+mhicreofon
+is
+a
+chamara
+agad
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+of
+reminder
+notification
+shown
+when
+the
+device
+'
+s
+camera
+is
+shared
+with
+a
+website
+(
+WebRTC
+)
+.
+%
+1
+s
+is
+a
+placeholder
+that
+will
+be
+replaced
+by
+the
+app
+name
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_media_sharing_camera_reminder_text
+"
+>
+Cuimhnich
+tha
+%
+1
+s
+a
+cleachdadh
+a
+chamara
+agad
+fhathast
+.
+Thoir
+gnogag
+a
+dh
+fhosgladh
+an
+taba
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+of
+reminder
+notification
+shown
+when
+the
+device
+'
+s
+microphone
+is
+shared
+with
+a
+website
+(
+WebRTC
+)
+%
+1
+s
+is
+a
+placeholder
+that
+will
+be
+replaced
+by
+the
+app
+name
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_media_sharing_microphone_reminder_text_2
+"
+>
+Cuimhnich
+tha
+%
+1
+s
+a
+cleachdadh
+a
+mhicreofon
+agad
+fhathast
+.
+Thoir
+gnogag
+a
+dh
+fhosgladh
+an
+taba
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+of
+reminder
+notification
+shown
+when
+the
+device
+'
+s
+camera
+and
+microphone
+is
+shared
+with
+a
+website
+(
+WebRTC
+)
+%
+1
+s
+is
+a
+placeholder
+that
+will
+be
+replaced
+by
+the
+app
+name
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_media_sharing_camera_and_microphone_reminder_text_2
+"
+>
+Cuimhnich
+tha
+%
+1
+s
+a
+cleachdadh
+a
+mhicreofon
+is
+a
+chamara
+agad
+fhathast
+.
+Thoir
+gnogag
+a
+dh
+fhosgladh
+an
+taba
+.
+<
+/
+string
+>
+<
+!
+-
+-
 This
 is
 the
