--- a/mobile/android/fenix/app/src/main/res/values/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values/strings.xml
@@ -8626,6 +8626,13 @@ ignore
 "
 UnusedResources
 "
+moz
+:
+removedIn
+=
+"
+133
+"
 >
 Explore
 more
@@ -8670,10 +8677,105 @@ ignore
 "
 UnusedResources
 "
+moz
+:
+removedIn
+=
+"
+133
+"
 >
 Start
 browsing
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+for
+checking
+more
+add
+-
+ons
+on
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_explore_more_extensions_2
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Explore
+more
+extensions
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+button
+for
+start
+browsing
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_start_browsing_button_2
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Start
+browsing
 <
 /
 string
